# M2

./: .gitignore  2025-07-26-this-session-is-being-continued-from-a-previous-co.txt  2025-07-27-14-30-M2JK.txt  BUILD-ARM64-MACOS.md  CLAUDE.md  ExamplePackage.m2  FactoryAndNormaliz.md  M2-DEVELOPMENT-WORKFLOW.md  M2-OUTPUT-SYSTEM-ANALYSIS.md  hist.txt  test_boundary_debug.py  test_m2_build.py  test_m2_interrupt.py  test_m2_modes.py  test_mode_switching.ipynb  test_mode_switching.py  test_mode_switching_simple.py  test_pi_debug.py
M2-Jupyter-Kernel/: .gitignore  2025-07-27-M2-Jupyter-Kernel.txt  2025-07-27-M2JK.txt  2025-07-28-this-session-is-being-continued-from-a-previous-co.txt  CODEMIRROR_EXTENSION_JOURNEY.md  CORRECT_TEST_PROCEDURE.md  DEBUG_COMMANDS.md  DEBUG_TESTING_GUIDE.md  FEATURE_ROADMAP.md  FEDERATED_EXTENSION_INSTALLATION.md  FIXES_SUMMARY.md  FRIEND_SUGGESTIONS_ANALYSIS.md  INTERRUPT_TIMEOUT_ANALYSIS.md  LICENSE  M2_AI_CONTEXT.md  M2_HIGHLIGHTING_IMPLEMENTATION_PLAN.md  M2_SYNTAX_HIGHLIGHTING_ARCHITECTURE.md  M2_SYNTAX_HIGHLIGHTING_FIX_GUIDE.md  M2_SYNTAX_HIGHLIGHTING_SUMMARY.md  PROCESS_MONITORING_IMPLEMENTATION.md  QUICK_FIX_GUIDE.md  README.md  README_EXTENSION.md  RELEASE.md  SYNTAX_HIGHLIGHTING_DEBUG.md  SYNTAX_HIGHLIGHTING_TEST_RESULTS.md  TEST_HIGHLIGHTING_NOW.sh  TEST_PARSER_ISSUE.md  TEST_PROCEDURE.md  Untitled.ipynb  build_m2_extension.sh  check_css_loaded.js  check_jupyter_highlighting.py  check_jupyter_language.py  cookiecutter-config.yaml  fix_parser_bundle.py  inject_css_fix.js  install.json  install_m2_codemirror.py  install_syntax.py  (+51 more)
M2-Jupyter-Kernel/.github/: copilot-instructions.md
M2-Jupyter-Kernel/_archive/: README.md
M2-Jupyter-Kernel/_archive/docs/: ASYNC_EXECUTION.md  CODEMIRROR_EXTENSION_JOURNEY.md  CODEMIRROR_EXTENSION_REPORT.md  CODEMIRROR_LESSONS_LEARNED.md  CODEMIRROR_M2_EXTENSION_SUMMARY.md  CODE_INTELLIGENCE_SUMMARY.md  FRIEND_ANALYSIS_RESULTS.md  HARDENED_STYLING_SUMMARY.md  IMPLEMENTATION_STATUS.md  JUPYTERLAB_M2_EXTENSION_PLAN.md  JUPYTER_DEBUG_PROTOCOL_ANALYSIS.md  M2_CODEMIRROR_EXTENSION_PLAN.md  M2_DEBUGGER_INTEGRATION.md  M2_SYNTAX_HIGHLIGHTING_GUIDE.md  M2_SYNTAX_STATUS.md  PARSER_ANALYSIS_SUMMARY.md  PARSER_FIXED_SUMMARY.md  SYNTAX_HIGHLIGHTING_STATUS.md  SYNTAX_HIGHLIGHTING_SUMMARY.md  SYNTAX_HIGHLIGHTING_TEST_RESULTS.md  WEBAPP_PROTOCOL_INTEGRATION.md  WHY_PYTHON_WORKS.md  codemirror_explanation.md  test_lezer_grammar.md  test_proper_fix.md  testing_framework_proposal.md
M2-Jupyter-Kernel/_archive/misc/: enhanced_m2.grammar
M2-Jupyter-Kernel/_archive/scripts-js/: console_fix.js  fix_highlight_now.js  inject_hardened_bundle.js  test_parser_node.js  test_parser_simple.js  validate_grammar.js
M2-Jupyter-Kernel/_archive/scripts-py/: apply_hardened_colors.py  apply_proper_fix.py  check_codemirror_extension.py  conftest.py  demo_smart_timeout.py  fix_bundle_duplicate.py  patch_webpack_bundle.py  test_code_intelligence.py  test_codemirror_debug.py  test_codemirror_highlighting.py  test_def_fix_simple.py  test_exact_notebook_issues.py  test_final_output.py  test_heartbeat.py  test_latest_fixes.py  test_live_highlighting.py  test_m2_raw_output.py  test_matrix_cleaning.py  test_matrix_regex.py  test_notebook_integration.py  test_notebook_issues.py  test_output_data.py  test_output_fixes.py  test_real_functionality.py
M2-Jupyter-Kernel/_archive/scripts-sh/: FINAL_FIX_HARDENED_COLORS.sh  RUN_HIGHLIGHTING_TEST.sh  RUN_TEST_NOW.sh  (+6 more)
M2-Jupyter-Kernel/codemirror-lang-m2/: .gitignore  NIGHTLY_REPORT.md  PARSING_ERROR_ANALYSIS.md  README.md  package-lock.json  package.json  tsconfig.json
M2-Jupyter-Kernel/docs/: README.md  code-intelligence.md  extension-workflow.md  grammar.md  highlighting.md  symbol-pipeline.md
M2-Jupyter-Kernel/examples/: Untitled.ipynb  Untitled4.ipynb  complete_intersections_demo.ipynb  debug_latex.ipynb  definition_magic_demo.ipynb  example_notebook.ipynb  goto_definition_demo.ipynb  line_magic_semantics.ipynb  long_computation_test.m2  magic_commands_demo.ipynb  rich_display_demo.m2  syntax_highlighting_demo.ipynb  test_all_fixes.ipynb  test_fixed_issues.ipynb  test_functionality.ipynb  test_latex.ipynb  test_latex_and_ordering.ipynb  test_other_output.ipynb  test_other_output_fix.ipynb  test_progress_features.ipynb  test_progress_magic.ipynb  test_smart_output.ipynb  timeout_management.m2
M2-Jupyter-Kernel/jupyterlab-m2/: .gitignore  README.md  build.sh  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
M2-Jupyter-Kernel/jupyterlab-m2-heartbeat/: .gitignore  README.md  install.sh  package-lock.json  package.json
M2-Jupyter-Kernel/jupyterlab_m2_codemirror/: .gitignore  .prettierignore
M2-Jupyter-Kernel/m2_kernel/: __init__.py  __main__.py  async_executor.py  cell_parser.py  code_intelligence.py  codemirror_mode.js  codemirror_mode_m2.js  enhanced_help.py  heartbeat.py  install.py  kernel.json  kernel.py  language_data.py  m2_lexer.py  m2_process.py  process_monitor.py  progress_tracker.py  smart_timeout.py  status_widget.py  syntax_highlight.js
M2-Jupyter-Kernel/scripts/: generate_symbols.py
M2-Jupyter-Kernel/src/: highlight.ts  index.ts  index_debug.ts  index_original.ts  index_simple.ts  index_test_python.ts  m2Hover.ts  m2Language.ts  m2Language_new.ts  m2Symbols.json
M2-Jupyter-Kernel/style/: index.css  m2-highlighting.css
M2-Jupyter-Kernel/tests/: execution_profiler.py  kernel_direct_test.py  simple_timing_test.py  test_framework.py  test_kernel.py
M2/test_find_libs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+239 files in other folders)
